cgo/include/urnetwork_sdk.h

/* ----- core ----- */

/* the sdk version this library was built from */
char* urnet_version(void);
/* incompatible C ABI revision; additive exports retain this value */
int32_t urnet_abi_version(void);
void urnet_free_string(char* s);
/* release a handle. returns false if the handle was unknown. */
bool urnet_release(uint64_t handle);
/* number of live handles, for leak checks */
int64_t urnet_live_handle_count(void);
/* ----- byte buffer results (hand-written) ----- */

/* Socket calls block: use a worker thread. Timeouts are milliseconds; deadlines
 * are Unix epoch milliseconds (0 clears). Read consumes bytes/datagrams, and
 * cannot be used as a size query. A partial result can accompany out_error.
 * EOF is separate from an empty UDP datagram. Release closes socket handles. */
uint64_t urnet_device_dial(uint64_t self, const char* network, const char* address, int64_t timeout_millis, char** out_error);
uint64_t urnet_device_dial_tls(uint64_t self, const char* network, const char* address, int64_t timeout_millis, const char* tls_json, char** out_error);
int32_t urnet_conn_read(uint64_t self, uint8_t* out, int32_t capacity, bool* eof, char** out_error);
int32_t urnet_conn_write(uint64_t self, const uint8_t* data, int32_t length, char** out_error);
bool urnet_conn_set_deadline(uint64_t self, int64_t epoch_millis, char** out_error);
bool urnet_conn_set_read_deadline(uint64_t self, int64_t epoch_millis, char** out_error);
bool urnet_conn_set_write_deadline(uint64_t self, int64_t epoch_millis, char** out_error);
bool urnet_conn_close(uint64_t self, char** out_error);
bool urnet_conn_close_read(uint64_t self, char** out_error);
bool urnet_conn_close_write(uint64_t self, char** out_error);
/* SetPayoutWalletCallback */
typedef void (*urnet_set_payout_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* SetPointsLeaderboardPublicCallback */
typedef void (*urnet_set_points_leaderboard_public_cb)(void* user_data, const char* result_json, const char* err_param);
/* SetupNewDeviceCallback */
typedef bool (*urnet_setup_new_device_cb)(void* user_data, uint64_t device, const char* proxy_config_result_json);
/* SnClaimCallback */
typedef void (*urnet_sn_claim_confirmed_cb)(void* user_data, int64_t epoch, const char* tx_hash, int64_t amount_rao);
typedef void (*urnet_sn_claim_done_cb)(void* user_data);
typedef void (*urnet_sn_claim_failed_cb)(void* user_data, int64_t epoch, const char* message);
typedef void (*urnet_sn_claim_sent_cb)(void* user_data, int64_t epoch, const char* tx_hash);
/* SnClaimsCallback */
typedef void (*urnet_sn_claims_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnConnectWalletCallback */
typedef void (*urnet_sn_connect_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnEpochCallback */
typedef void (*urnet_sn_epoch_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnGasBalanceCallback */
typedef void (*urnet_sn_gas_balance_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnGetWalletCallback */
typedef void (*urnet_sn_get_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnHeadCallback */
typedef void (*urnet_sn_head_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnSetWalletCallback */
typedef void (*urnet_sn_set_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnValidateWalletCallback */
typedef void (*urnet_sn_validate_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnWalletChangeListener */
typedef void (*urnet_sn_wallet_change_cb)(void* user_data, const char* wallet_json);
/* SolanaPaymentIntentCallback */
typedef void (*urnet_solana_payment_intent_cb)(void* user_data, const char* result_json, const char* err_param);
/* StripeCreateCheckoutSessionCallback */
typedef void (*urnet_stripe_create_checkout_session_cb)(void* user_data, const char* result_json, const char* err_param);
/* StripeCreateCustomerPortalCallback */
typedef void (*urnet_stripe_create_customer_portal_cb)(void* user_data, const char* result_json, const char* err_param);
/* StripePaymentIntentCallback */
typedef void (*urnet_stripe_payment_intent_cb)(void* user_data, const char* result_json, const char* err_param);
/* StripePaymentSheetCallback */
typedef void (*urnet_stripe_payment_sheet_cb)(void* user_data, const char* result_json, const char* err_param);
/* StripePricesCallback */
typedef void (*urnet_stripe_prices_cb)(void* user_data, const char* result_json, const char* err_param);
/* SubprotocolListener */
typedef void (*urnet_subprotocol_cb)(void* user_data, int64_t subprotocol_id, const char* source_client_id, const uint8_t* message_bytes, int32_t message_bytes_len);
/* SubprotocolsQueryCallback */
typedef void (*urnet_subprotocols_query_cb)(void* user_data, const char* subprotocol_ids_json, bool ok_param);
/* SubscriptionBalanceCallback */
typedef void (*urnet_subscription_balance_cb)(void* user_data, const char* result_json, const char* err_param);
/* SubscriptionBalanceChangeListener */
typedef void (*urnet_subscription_balance_change_cb)(void* user_data);
/* SubscriptionCreatePaymentIdCallback */
typedef void (*urnet_subscription_create_payment_id_cb)(void* user_data, const char* result_json, const char* err_param);
/* SubscriptionJwtOutOfSyncListener */
typedef void (*urnet_subscription_jwt_out_of_sync_cb)(void* user_data, bool server_is_pro);
/* ThroughputListener */
typedef void (*urnet_throughput_cb)(void* user_data);
/* TransportSettingsChangeListener */
typedef void (*urnet_transport_settings_change_cb)(void* user_data, const char* transport_settings_json);
/* TransportStatusChangeListener */
typedef void (*urnet_transport_status_change_cb)(void* user_data, const char* transport_status_json);
/* TunnelChangeListener */
typedef void (*urnet_tunnel_change_cb)(void* user_data, bool tunnel_started);
/* UnlinkReferralNetworkCallback */
typedef void (*urnet_unlink_referral_network_cb)(void* user_data, const char* result_json, const char* err_param);
/* UnpaidByteCountListener */
typedef void (*urnet_unpaid_byte_count_cb)(void* user_data, int64_t p0);
/* UpgradeGuestCallback */
typedef void (*urnet_upgrade_guest_cb)(void* user_data, const char* result_json, const char* err_param);
/* UpgradeGuestExistingCallback */
typedef void (*urnet_upgrade_guest_existing_cb)(void* user_data, const char* result_json, const char* err_param);
/* UploadLogsCallback */
typedef void (*urnet_upload_logs_cb)(void* user_data, const char* result_json, const char* err_param);
/* ValidateAddressCallback */
typedef void (*urnet_validate_address_cb)(void* user_data, bool valid);
/* ValidateReferralCodeCallback */
typedef void (*urnet_validate_referral_code_cb)(void* user_data, const char* result_json, const char* err_param);
/* VerifyAppleTransactionCallback */
typedef void (*urnet_verify_apple_transaction_cb)(void* user_data, const char* result_json, const char* err_param);
/* VerifyPlayPurchaseCallback */
typedef void (*urnet_verify_play_purchase_cb)(void* user_data, const char* result_json, const char* err_param);
/* VerifySeekerNftHolderCallback */
typedef void (*urnet_verify_seeker_nft_holder_cb)(void* user_data, const char* result_json, const char* err_param);
/* ViewController */
typedef void (*urnet_view_controller_close_cb)(void* user_data);
typedef void (*urnet_view_controller_start_cb)(void* user_data);
typedef void (*urnet_view_controller_stop_cb)(void* user_data);
/* VpnInterfaceWhileOfflineChangeListener */
typedef void (*urnet_vpn_interface_while_offline_change_cb)(void* user_data, bool vpn_interface_while_offline);
/* WalletBalanceCallback */
typedef void (*urnet_wallet_balance_cb)(void* user_data, const char* result_json, const char* err_param);
/* WalletCircleInitCallback */
typedef void (*urnet_wallet_circle_init_cb)(void* user_data, const char* result_json, const char* err_param);
/* WalletCircleTransferOutCallback */
typedef void (*urnet_wallet_circle_transfer_out_cb)(void* user_data, const char* result_json, const char* err_param);
/* WalletValidateAddressCallback */
typedef void (*urnet_wallet_validate_address_cb)(void* user_data, const char* result_json, const char* err_param);
/* WindowStatusChangeListener */
typedef void (*urnet_window_status_change_cb)(void* user_data, const char* window_status_json);
/* IoLoopDoneCallback */
typedef void (*urnet_io_loop_done_cb)(void* user_data);