csharp/Raw.g.cs

  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_set_payout_wallet_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_set_points_leaderboard_public_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate byte urnet_setup_new_device_cb(IntPtr a0, ulong a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_claim_confirmed_cb(IntPtr a0, long a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2, long a3);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_claim_done_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_claim_failed_cb(IntPtr a0, long a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_claim_sent_cb(IntPtr a0, long a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_claims_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_connect_wallet_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_epoch_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_gas_balance_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_get_wallet_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_head_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_set_wallet_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_validate_wallet_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_sn_wallet_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_solana_payment_intent_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_stripe_create_checkout_session_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_stripe_create_customer_portal_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_stripe_payment_intent_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_stripe_payment_sheet_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_stripe_prices_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_subprotocol_cb(IntPtr a0, long a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2, IntPtr a3, int a4);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_subprotocols_query_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, byte a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_subscription_balance_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_subscription_balance_change_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_subscription_create_payment_id_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_subscription_jwt_out_of_sync_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_throughput_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_transport_settings_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_transport_status_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_tunnel_change_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_unlink_referral_network_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_unpaid_byte_count_cb(IntPtr a0, long a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_upgrade_guest_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_upgrade_guest_existing_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_upload_logs_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_validate_address_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_validate_referral_code_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_verify_apple_transaction_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_verify_play_purchase_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_verify_seeker_nft_holder_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_view_controller_close_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_view_controller_start_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_view_controller_stop_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_vpn_interface_while_offline_change_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_wallet_balance_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_wallet_circle_init_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_wallet_circle_transfer_out_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_wallet_validate_address_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_window_status_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_io_loop_done_cb(IntPtr a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_version();
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern int urnet_abi_version();
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_free_string(IntPtr a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_release(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern long urnet_live_handle_count();
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_dial(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2, long a3, out IntPtr a4);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_dial_tls(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2, long a3, [MarshalAs(UnmanagedType.LPUTF8Str)] string a4, out IntPtr a5);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern int urnet_conn_read(ulong a0, IntPtr a1, int a2, out byte a3, out IntPtr a4);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern int urnet_conn_write(ulong a0, IntPtr a1, int a2, out IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_conn_set_deadline(ulong a0, long a1, out IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_conn_set_read_deadline(ulong a0, long a1, out IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_conn_set_write_deadline(ulong a0, long a1, out IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_conn_close(ulong a0, out IntPtr a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_conn_close_read(ulong a0, out IntPtr a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_conn_close_write(ulong a0, out IntPtr a1);
